--- a/index.html
+++ b/index.html
@@ -76,6 +76,71 @@
 
 </div>
 
+<br><hr><br>
+
+<div class="container">
+
+    <div class="row">
+
+        <div class="col-1"><img src="img/ChatGPT.svg" alt="chat_gpt"></div>
+        <div class="col-2">
+            <img src="img/Ethereum_icon.svg" alt="eth">
+            <span>ETH</span>
+        </div>
+
+    <div class="col-12">
+        <div>
+            <span>$6,300</span>
+            <img src="img/copy.svg" alt="copy">
+            <img src="img/like.svg" alt="like">
+        </div>
+
+        <span>adress</span> | <span>days</span>
+
+    </div>
+
+    <div>
+        CHARTS
+    </div>
+
+        <div class="col-6">
+            <img src="img/Bitcoin.svg" alt="btc">
+            <span>bitcoin</span>
+            <img src="img/copy_next.svg" alt="copy2">
+        </div>
+        <div class="col-6">
+            <img src="img/Bitcoin.svg" alt="btc">
+            <span>bitcoin</span>
+            <img src="img/copy_next.svg" alt="copy2">
+        </div>
+        <div class="col-6">
+            <img src="img/Bitcoin.svg" alt="btc">
+            <span>bitcoin</span>
+            <img src="img/copy_next.svg" alt="copy2">
+        </div>
+
+        <div class="d-flex">
+            <div class="col-3">
+                <img src="img/wallet_info.svg" alt="wallet_info">
+                <p>Wallet info</p>
+            </div>
+            <div class="col-3">
+                <img src="img/traders.svg" alt="top_traders">
+                <p>Top traders</p>
+            </div>
+            <div class="col-3">
+                <img src="img/trading.svg" alt="copy_trading">
+                <p>Copy Trading</p>
+            </div>
+            <div class="col-3">
+                <img src="img/settings__.svg" alt="settings">
+                <p>Settings</p>
+            </div>
+        </div>
+
+    </div>
+
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
