--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
 
     <div class="row">
 
-        <div class="col-1"><img src="img/ChatGPT.svg" alt="chat_gpt"></div>
+        <div class="col-3"><img src="img/ChatGPT.svg" alt="chat_gpt"></div>
         <div class="col-2">
             <img src="img/Ethereum_icon.svg" alt="eth">
             <span>ETH</span>
         </div>
 
-    <div class="col-12">
+    <div class="col-8">
         <div>
             <span>$6,300</span>
             <img src="img/copy.svg" alt="copy">
@@ -99,7 +99,7 @@
 
     </div>
 
-    <div>
+    <div class="col-10 d-flex">
         CHARTS
     </div>
 
@@ -119,22 +119,22 @@
             <img src="img/copy_next.svg" alt="copy2">
         </div>
 
-        <div class="d-flex">
+        <div class="row text-center">
             <div class="col-3">
                 <img src="img/wallet_info.svg" alt="wallet_info">
-                <p>Wallet info</p>
+                <p class="text">Wallet info</p>
             </div>
             <div class="col-3">
                 <img src="img/traders.svg" alt="top_traders">
-                <p>Top traders</p>
+                <p class="text">Top traders</p>
             </div>
             <div class="col-3">
                 <img src="img/trading.svg" alt="copy_trading">
-                <p>Copy Trading</p>
+                <p class="text">Copy Trading</p>
             </div>
             <div class="col-3">
                 <img src="img/settings__.svg" alt="settings">
-                <p>Settings</p>
+                <p class="text">Settings</p>
             </div>
         </div>
 
