--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -7,141 +7,85 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>screens</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-<!--    <link rel="stylesheet" href="css/styles.scss">-->
-    <link rel="stylesheet" href="css/style2.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
 <div class="container">
 
-    <div class="row">
-        <div class="col-1"><img src="img/ChatGPT.svg" alt="chat_gpt"></div>
+    <div class="row align-items-center">
+
+        <div class="col-4 gpt">
+            <a href="#"><img src="img/ChatGPT.svg" alt="chat_gpt"></a>
+        </div>
         <div class="col-2">
-            <img src="img/Ethereum_icon.svg" alt="eth">
-            <span>ETH</span>
-        </div>
-    </div>
-
-    <div class="col-8">
-        <span>$6,300</span>
-        <img src="img/copy.svg" alt="copy">
-        <img src="img/like.svg" alt="like">
-        <div class="row">
-            <p class="col-1">adress</p>
-            |
-            <p class="col-6">days</p>
-        </div>
-    </div>
-
-    <div>
-        CHARTS
-    </div>
-
-    <div class="row">
-        <div class="col-6">
-            <img src="img/Bitcoin.svg" alt="btc">
-            <span>bitcoin</span>
-            <img src="img/copy_next.svg" alt="copy2">
-        </div>
-        <div class="col-6">
-            <img src="img/Bitcoin.svg" alt="btc">
-            <span>bitcoin</span>
-            <img src="img/copy_next.svg" alt="copy2">
-        </div>
-        <div class="col-6">
-            <img src="img/Bitcoin.svg" alt="btc">
-            <span>bitcoin</span>
-            <img src="img/copy_next.svg" alt="copy2">
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-3">
-            <img src="img/wallet_info.svg" alt="wallet_info">
-            <p>Wallet info</p>
-        </div>
-        <div class="col-3">
-            <img src="img/traders.svg" alt="top_traders">
-            <p>Top traders</p>
-        </div>
-        <div class="col-3">
-            <img src="img/trading.svg" alt="copy_trading">
-            <p>Copy Trading</p>
-        </div>
-        <div class="col-3">
-            <img src="img/settings__.svg" alt="settings">
-            <p>Settings</p>
-        </div>
-    </div>
-
-</div>
-
-<br><hr><br>
-
-<div class="container">
-
-    <div class="row">
-
-        <div class="col-3"><img src="img/ChatGPT.svg" alt="chat_gpt"></div>
-        <div class="col-2">
-            <img src="img/Ethereum_icon.svg" alt="eth">
-            <span>ETH</span>
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="img/Ethereum_icon.svg" alt="eth">
+                    <span>ETH</span>
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Base</a></li>
+                </ul>
+            </div>
         </div>
 
     <div class="col-8">
-        <div>
-            <span>$6,300</span>
+        <div class="d-flex align-items-center">
+            <span>$</span>
+            <span class="price">$6,300.25</span>
             <img src="img/copy.svg" alt="copy">
             <img src="img/like.svg" alt="like">
         </div>
-
-        <span>adress</span> | <span>days</span>
-
+        <div class="row">
+            <span id="adress" class="adress">0xfca71d....ff410b25cbf8ad</span>
+            <span id="days" class="days">553 days</span>
+        </div>
     </div>
 
-    <div class="col-10 d-flex">
-        CHARTS
+    <div class="col-12">
+        <span class="charts">CHARTS</span>
     </div>
 
         <div class="col-6">
             <img src="img/Bitcoin.svg" alt="btc">
-            <span>bitcoin</span>
+            <span class="btc">bitcoin</span>
             <img src="img/copy_next.svg" alt="copy2">
         </div>
         <div class="col-6">
             <img src="img/Bitcoin.svg" alt="btc">
-            <span>bitcoin</span>
+            <span class="btc">bitcoin</span>
             <img src="img/copy_next.svg" alt="copy2">
         </div>
-        <div class="col-6">
+        <div class="col-12">
             <img src="img/Bitcoin.svg" alt="btc">
-            <span>bitcoin</span>
+            <span class="btc">bitcoin</span>
             <img src="img/copy_next.svg" alt="copy2">
         </div>
 
-        <div class="row text-center">
-            <div class="col-3">
-                <img src="img/wallet_info.svg" alt="wallet_info">
-                <p class="text">Wallet info</p>
+            <div class="row g-0 align-items-center">
+                <div class="col-3 text-center">
+                    <img src="img/wallet_info.svg" alt="wallet_info">
+                    <p class="text">Wallet info</p>
+                </div>
+                <div class="col-3 text-center">
+                    <img src="img/traders.svg" alt="top_traders">
+                    <p class="text">Top traders</p>
+                </div>
+                <div class="col-3 text-center">
+                    <img src="img/trading.svg" alt="copy_trading">
+                    <p class="text">Copy Trading</p>
+                </div>
+                <div class="col-3 text-center">
+                    <img src="img/settings__.svg" alt="settings">
+                    <p class="text">Settings</p>
+                </div>
             </div>
-            <div class="col-3">
-                <img src="img/traders.svg" alt="top_traders">
-                <p class="text">Top traders</p>
-            </div>
-            <div class="col-3">
-                <img src="img/trading.svg" alt="copy_trading">
-                <p class="text">Copy Trading</p>
-            </div>
-            <div class="col-3">
-                <img src="img/settings__.svg" alt="settings">
-                <p class="text">Settings</p>
-            </div>
-        </div>
 
     </div>
 
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>-->
+<!--<script src="js/script.js"></script>-->
 </body>
 </html>
