--- a/index.html
+++ b/index.html
@@ -5,87 +5,175 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>screens</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <title>portfolio_2</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col text-center">
+            <div class="hello">hello</div>
+        </div>
+        <div class="col g-0 text-center">
+            <div class="hello">hello</div>
+        </div>
+        <div class="col text-center">
+            <div class="hello">hello</div>
+        </div>
+    </div>
+</div>
+
+<br>
+<hr>
+<br>
+
 <div class="container">
 
-    <div class="row align-items-center">
-
-        <div class="col-4 gpt">
-            <a href="#"><img src="img/ChatGPT.svg" alt="chat_gpt"></a>
-        </div>
-        <div class="col-2">
-            <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="img/Ethereum_icon.svg" alt="eth">
-                    <span>ETH</span>
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Base</a></li>
+    <header>
+        <div class="row">
+            <div class="col d-flex align-items-center gap-5">
+                <a href="#"><img src="img/chatGPT.svg" alt="chat_gpt"></a>
+                <ul class="d-flex align-items-center">
+                    <li><a href="#"><img src="img/Ethereum_icon.svg" alt="eth">ETH</a></li>
+                    <!--                        <li><a href="#"><img src="" alt="base"></a>BASE</li>-->
                 </ul>
             </div>
         </div>
+    </header>
 
-    <div class="col-8">
-        <div class="d-flex align-items-center">
-            <span>$</span>
-            <span class="price">$6,300.25</span>
-            <img src="img/copy.svg" alt="copy">
-            <img src="img/like.svg" alt="like">
-        </div>
-        <div class="row">
-            <span id="adress" class="adress">0xfca71d....ff410b25cbf8ad</span>
-            <span id="days" class="days">553 days</span>
-        </div>
-    </div>
-
-    <div class="col-12">
-        <span class="charts">CHARTS</span>
-    </div>
-
-        <div class="col-6">
-            <img src="img/Bitcoin.svg" alt="btc">
-            <span class="btc">bitcoin</span>
-            <img src="img/copy_next.svg" alt="copy2">
-        </div>
-        <div class="col-6">
-            <img src="img/Bitcoin.svg" alt="btc">
-            <span class="btc">bitcoin</span>
-            <img src="img/copy_next.svg" alt="copy2">
-        </div>
-        <div class="col-12">
-            <img src="img/Bitcoin.svg" alt="btc">
-            <span class="btc">bitcoin</span>
-            <img src="img/copy_next.svg" alt="copy2">
-        </div>
-
-            <div class="row g-0 align-items-center">
-                <div class="col-3 text-center">
-                    <img src="img/wallet_info.svg" alt="wallet_info">
-                    <p class="text">Wallet info</p>
+    <main>
+        <section class="price">
+            <div class="row align-items-center">
+                <div class="col-12 d-flex align-items-center">
+                    <div class="item">$6,300.25</div>
+                    <div><img src="img/copy.svg" alt="copy"></div>
+                    <div><img src="img/like.svg" alt="like"></div>
                 </div>
-                <div class="col-3 text-center">
-                    <img src="img/traders.svg" alt="top_traders">
-                    <p class="text">Top traders</p>
-                </div>
-                <div class="col-3 text-center">
-                    <img src="img/trading.svg" alt="copy_trading">
-                    <p class="text">Copy Trading</p>
-                </div>
-                <div class="col-3 text-center">
-                    <img src="img/settings__.svg" alt="settings">
-                    <p class="text">Settings</p>
+                <div class="col d-flex align-items-center">
+                    <p class="adress">0xfca71d....ff410b25cbf8ad</p>
+                    <p class="days">| 553 days</p>
                 </div>
             </div>
+        </section>
 
-    </div>
+        <section class="charts">
+            <div class="row">
+                <div class="col">
+                    // CHARTS
+                </div>
+            </div>
+        </section>
+
+        <section class="date">
+            <div class="row">
+                <div class="col-6 d-flex flex-column gap-3">
+
+                    <div class="d-flex align-items-center gap-2">
+                        <img src="img/Bitcoin.svg" alt="btc">
+                        <span>bitcoin</span>
+                        <img src="img/copy_next.svg" alt="copy_next">
+                    </div>
+
+                    <div class="d-flex gap-2">
+                        <div>
+                            <p>1 /2</p>
+                            <p>10min</p>
+                        </div>
+
+                        <div>
+                            <p>49%</p>
+                            <p>200$</p>
+                        </div>
+
+                        <div class="d-flex align-items-center"><p>Sell all</p></div>
+                    </div>
+
+                </div>
+
+                <div class="col-6 d-flex flex-column gap-3">
+
+                    <div class="d-flex align-items-center gap-2">
+                        <img src="img/Bitcoin.svg" alt="btc">
+                        <span>bitcoin</span>
+                        <img src="img/copy_next.svg" alt="copy_next">
+                    </div>
+
+                    <div class="d-flex gap-2">
+                        <div>
+                            <p>1 /2</p>
+                            <p>10min</p>
+                        </div>
+
+                        <div>
+                            <p>49%</p>
+                            <p>200$</p>
+                        </div>
+
+                        <div class="d-flex align-items-center"><p>Sell all</p></div>
+                    </div>
+
+                </div>
+
+                <div class="col-6 d-flex flex-column gap-3">
+
+                    <div class="d-flex align-items-center gap-2">
+                        <img src="img/Bitcoin.svg" alt="btc">
+                        <span>bitcoin</span>
+                        <img src="img/copy_next.svg" alt="copy_next">
+                    </div>
+
+                    <div class="d-flex gap-2">
+                        <div>
+                            <p>1 /2</p>
+                            <p>10min</p>
+                        </div>
+
+                        <div>
+                            <p>49%</p>
+                            <p>200$</p>
+                        </div>
+
+                        <div class="d-flex align-items-center"><p>Sell all</p></div>
+                    </div>
+
+                </div>
+
+
+            </div>
+        </section>
+
+
+        </section>
+
+
+    </main>
+
+    <footer>
+        <div class="row text-center">
+            <div class="col-3 ">
+                <a href="#"><img src="img/wallet_info.svg" alt="wallet"></a>
+                <p>Wallet info</p>
+            </div>
+            <div class="col-3">
+                <a href="#"><img src="img/traders.svg" alt="traders"></a>
+                <p>Top traders</p>
+            </div>
+            <div class="col-3">
+                <a href="#"><img src="img/trading.svg" alt=""></a>
+                <p>Copy Trading</p>
+            </div>
+            <div class="col-3">
+                <a href="#"><img src="img/settings.svg" alt=""></a>
+                <p>Settings</p>
+            </div>
+        </div>
+    </footer>
 
 </div>
 
-<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>-->
-<!--<script src="js/script.js"></script>-->
+<script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
